# structured-extraction-ft

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.serve  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
configs/: dpo_config.yaml  sft_config.yaml
data/: generate_dataset.py
data/schemas/: extraction_schema.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  IMPROVEMENT_AND_SECURITY_REPORT.md  eval_data.json  report.md
scripts/: evaluate.py  full_pipeline.py  generate_report.py  load_test.py  run_dpo.py  run_dpo_fast.py  run_sft.py  run_tests.sh  test_dpo_grad.py
scripts/utils/: __init__.py  config.py  json_utils.py  model_loader.py
serving/: __init__.py  api.py  inference.py  schemas.py  settings.py
tests/: test_dataset_generator.py  test_evaluation.py  test_model_loader.py  test_run_dpo.py  test_run_sft.py  test_serving_api.py  test_smoke.py
