[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-extraction-ft"
version = "0.1.0"
description = "QLoRA fine-tuning pipeline and real-time inference API for structured JSON extraction from unstructured text"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Project Contributors" },
]
keywords = ["llm", "fine-tuning", "lora", "qlora", "dpo", "json-extraction", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.12.0",
    "transformers>=4.57.0",
    "accelerate>=1.13.0",
    "peft>=0.19.0",
    "trl>=1.5.0",
    "datasets>=4.8.0",
    "bitsandbytes>=0.49.0",
    "evaluate>=0.4.0",
    "scipy>=1.15.0",
    "huggingface-hub>=0.30.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
serving = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.0",
    "prometheus-client>=0.20.0",
]
tracking = [
    "wandb>=0.19.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/Ashok007-cmd/structured-extraction-ft"
Issues = "https://github.com/Ashok007-cmd/structured-extraction-ft/issues"
Changelog = "https://github.com/Ashok007-cmd/structured-extraction-ft/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["scripts*", "serving*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501", # line too long (handled by line-length formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["scripts", "data", "serving"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
